the pwa is not working

--- a/front/src/app.html
+++ b/front/src/app.html
@@ -4,11 +4,32 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
+		
+		<!-- PWA Meta Tags -->
 		<link rel="manifest" href="/manifest.webmanifest" />
-		<meta name="theme-color" content="#0d9488" />
+		<meta name="theme-color" content="#a78bfa" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="Auction" />
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="msapplication-TileColor" content="#a78bfa" />
+		<meta name="msapplication-tap-highlight" content="no" />
+		<link rel="manifest" href="/manifest.webmanifest" />
+
+		
+		<!-- Apple Touch Icons -->
+		<link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
+		
+		<!-- Fonts -->
+		<link 
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Cairo:wght@400;600;700;800;900&display=swap" 
+			rel="stylesheet"
+		/>
+		
+		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="font-inter">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
